should be nearly done

--- a/index.html
+++ b/index.html
@@ -79,31 +79,31 @@
           </a>
           <a href="filler for now (inactive)" target="_blank" class="project filler-for-now">
               <div class="project-label">
-                <h3>App for counting cars that pass by</h3>
+                <h3>App for counting cars that pass by (inactive)</h3>
                 <p>HTML, CSS, JavaScript</p>
               </div>
           </a>
           <a href="Eggs for breakfast (inactive)" target="_blank" class="project determine-if-having-eggs">
               <div class="project-label">
-                <h3>App for determining if you should have eggs for breakfast 50/50 yes or no</h3>
+                <h3>App for determining if you should have eggs for breakfast 50/50 yes or no (inactive)</h3>
                 <p>HTML, CSS, JavaScript</p>
               </div>
           </a>
           <a href="Moon temperature (inactive)" target="_blank" class="project current-moon-temperature">
               <div class="project-label">
-                <h3>App for telling you the current temperature on the moon</h3>
+                <h3>App for telling you the current temperature on the moon (inactive)</h3>
                 <p>HTML, CSS, JavaScript, MoonScript(not real)</p>
               </div>
           </a>
           <a href="Password Randomizer (inactive)" target="_blank" class="project assign-a-random-password">
               <div class="project-label">
-                <h3>App for getting a randomly generated password</h3>
+                <h3>App for getting a randomly generated password (inactive)</h3>
                 <p>HTML, CSS, JavaScript, Python</p>
               </div>
           </a>
           <a href="Random Cat Photos (inactive)" target="_blank" class="project random-cat-photo-generator">
               <div class="project label">
-                <h3>App that shows random cat photos</h3>
+                <h3>App that shows random cat photos (inactive)</h3>
                 <p>HTML, CSS, JavaScript</p>
               </div>
           </a>     
