--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="quote">
           <blockquote>
             <p id="quote-text">
-              99% of quotes <br>are wrongfuly attributed.
+              99% of quotes are<br>wrongfuly attributed.
             </p>
             <p>
               - Bill Nye the Science Guy.<br>
