--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
               <a href="#about-me">About Me</a>
           </li>
           <li>
-              <a href="my-projects">My Projects</a>
+              <a href="#my-projects">My Projects</a>
           </li>
             <li>
-              <a href="my-contact-information">My Contact Information</a>
+              <a href="#my-contact-information">My Contact Information</a>
             </li>
             <li>
               <a href="./assets/documents/connorohalloranresume.pdf" target="_blank">My Updated Resume</a>
@@ -33,7 +33,7 @@
   <!-- class hero start-->
       <section class="hero">
           <div>
-            <img src="./assets/images/profilepic.jpg" alt="A Picture of Connor OHalloran">
+            <img src="./assets/images/prof2.jpg" alt="A Picture of Connor OHalloran">
           </div>
           <div class="quote">
             <blockquote>
@@ -54,10 +54,12 @@
         </div>
 
         <div>
-          <p>
-            Lorem Lorem Lorem 
             <br><br>
-            More Lorem Lorem
+          <p>
+            Hello and welcome to my portfolio home page. My name is Connor, I have off and on been learning how to program, but I have recently taken a huge step forward in order learn programming by attending a coding acedemy, I have currently put formal education on hold to work on completing the course. While I am currently working towards learning Web Development I intend to pursue a Cyber Security path following the end of my Coding Course. </p>
+            <br><br>
+          <p>Please feel free to check out the various applications that I have made below. Thank You :D </p> 
+            <br><br>
           </p>
         </div>
       </section>
@@ -67,6 +69,7 @@
         <div class="title">
           <h2>My Projects</h2>
         </div>
+        <br><br>
         <div class = "projects-grid-wrapper">
           <div class="projects-grid">
 
@@ -101,7 +104,7 @@
                 </div>
             </a>
             <a href="Random Cat Photos (inactive)" target="_blank" class="project random-cat-photo-generator">
-                <div class="project label">
+                <div class="project-label">
                   <h3>App that shows random cat photos (inactive)</h3>
                   <p>HTML, CSS, JavaScript</p>
                 </div>
