--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div class="quote">
             <blockquote>
               <p id="quote-text">
-                99% of quotes are<br> wrongfuly attributed.
+                99% of quotes are<br> wrongfuly attributed
               </p>
               <p>
                 - Bill Nye the Science Guy.<br>
@@ -56,7 +56,7 @@
         <div>
             <br><br>
           <p>
-            Hello and welcome to my portfolio home page. My name is Connor, I have off and on been learning how to program, but I have recently taken a huge step forward in order learn programming by attending a coding acedemy, I have currently put formal education on hold to work on completing the course. While I am currently working towards learning Web Development I intend to pursue a Cyber Security path following the end of my Coding Course. </p>
+            Hello and welcome to my portfolio home page. My name is Connor, I have off and on been learning how to program, but I have recently taken a huge step forward in order learn programming by attending a coding acedemy, I have currently put formal education on hold to work on completing the course. While I am currently working towards learning more Web Development I intend to pursue a Cyber Security path following the end of my Coding Course. </p>
             <br><br>
           <p>Please feel free to check out the various applications that I have made below. Thank You :D </p> 
             <br><br>
